Working weekday calculator

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Weekday Calculator</title>
 </head>
 <body>
-  <h1>Content</h1>
+  <h1>Weekday Calculator</h1>
+  <form>
+    <input type="date" id="dateInput">
+    <button type="button" class="btn btn-info" id="submitBtn">Submit</button>
+  </form>
+  <span id="resultDisplay"></span>
 </body>
 </html>
